# ios-filedrop

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  pyrightconfig.json
src/ios_filedrop/: __init__.py  cli.py
tests/: test_cli.py
