[project]
name = "ios-filedrop"
version = "0.1.0"
description = "Send files from Linux to iCloud Drive for easy access in iOS Files."
readme = "README.md"
license = "MIT"
authors = [{ name = "Christopher Patti", email = "feoh@feoh.org" }]
requires-python = ">=3.11"
dependencies = ["cyclopts>=4.18.0"]

[project.urls]
Homepage = "https://github.com/feoh/ios-filedrop"
Repository = "https://github.com/feoh/ios-filedrop"
Issues = "https://github.com/feoh/ios-filedrop/issues"

[project.scripts]
ios-filedrop = "ios_filedrop.cli:app"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["mypy>=2.1.0", "pre-commit>=4.6.0", "pytest>=9.1.0", "ruff>=0.15.17"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "S", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
